OwnAudio/Midi/rust-midi/ownaudio-midi-ffi/include/ownaudio_midi_ffi.h

/* Auto-generated by cbindgen — do not edit by hand. */

#ifndef OWNAUDIO_MIDI_FFI_H
#define OWNAUDIO_MIDI_FFI_H

/* Warning: this file is auto-generated from Rust source. */

#include <stdarg.h>
#include <stdbool.h>
#include <stddef.h>
#include <stdint.h>
#include <stdlib.h>

/**
 * C-compatible error codes returned by every MIDI FFI function.
 *
 * Zero always means success. All other values describe the failure category so
 * the C# layer can map them to dedicated exception types.
 */
typedef enum MidiErrorCode {
    /**
     * Operation succeeded.
     */
    Success = 0,
    /**
     * No MIDI port matched the requested name.
     */
    PortNotFound = 1,
    /**
     * The backend failed to connect to or open the port.
     */
    ConnectionFailed = 2,
    /**
     * An operation required an open port but the port was not open.
     */
    PortNotOpen = 3,
    /**
     * The supplied bytes are not a valid Standard MIDI File.
     */
    InvalidFile = 4,
    /**
     * A required pointer argument was null.
     */
    NullPointer = 5,
    /**
     * The supplied handle does not point to a valid object.
     */
    InvalidHandle = 6,
    /**
     * The requested capability is not supported on this platform.
     */
    PlatformUnsupported = 7,
    /**
     * A panic was caught at the FFI boundary.
     */
    InternalPanic = 8,
    /**
     * An I/O or other internal error occurred.
     */
    IoError = 9,
} MidiErrorCode;

typedef struct Option_MidiMessageCallback Option_MidiMessageCallback;

typedef struct Option_MidiPulseCallback Option_MidiPulseCallback;

typedef struct Option_MidiSysExCallback Option_MidiSysExCallback;

/**
 * Opaque handle to a native MIDI timing clock.
 */
typedef struct MidiClockHandle {
    uint8_t _private[0];
} MidiClockHandle;

/**
 * Opaque handle to a parsed MIDI file held in native memory.
 */
typedef struct MidiFileHandle {
    uint8_t _private[0];
} MidiFileHandle;

/**
 * C-compatible MIDI file event used by both the parser query API (Rust fills
 * it) and the writer API (the C# layer fills it).
 *
 * For events read from a parsed file, `meta_data` points into memory owned by
 * the originating [`crate::handles::MidiFileHandle`] and is valid until that
 * handle is destroyed. For events passed to the writer, `meta_data` is borrowed
 * for the duration of the call and copied internally.
 */
typedef struct NativeMidiEvent {
    /**
     * Ticks since the previous event in the track.
     */
    int32_t delta_time;
    /**
     * Event category: 0 = MIDI, 1 = Meta, 2 = SysEx.
     */
    uint8_t event_type;
    /**
     * Status byte.
     */
    uint8_t status;
    /**
     * First data byte.
     */
    uint8_t data1;
    /**
     * Second data byte.
     */
    uint8_t data2;
    /**
     * Meta event sub-type byte.
     */
    uint8_t meta_type;
    /**
     * Padding for pointer alignment; always zero.
     */
    uint8_t _pad0;
    /**
     * Padding for pointer alignment; always zero.
     */
    uint8_t _pad1;
    /**
     * Padding for pointer alignment; always zero.
     */
    uint8_t _pad2;
    /**
     * Pointer to the payload bytes, or null when there is none.
     */
    const uint8_t *meta_data;
    /**
     * Number of payload bytes referenced by `meta_data`.
     */
    size_t meta_data_len;
} NativeMidiEvent;

/**
 * Opaque handle to an in-progress MIDI file serializer.
 */
typedef struct MidiWriterHandle {
    uint8_t _private[0];
} MidiWriterHandle;

/**
 * Opaque handle to a native MIDI input port.
 */
typedef struct MidiInputPortHandle {
    uint8_t _private[0];
} MidiInputPortHandle;

/**
 * Opaque handle to a native MIDI output port.
 */
typedef struct MidiOutputPortHandle {
    uint8_t _private[0];
} MidiOutputPortHandle;

/**
 * C-compatible short MIDI message passed to and from the C# layer.
 *
 * The explicit padding byte keeps the 8-byte `timestamp_us` field naturally
 * aligned and makes the layout identical to the managed `NativeMidiMessage`
 * mirror, which a parity test verifies on both sides.
 */
typedef struct NativeMidiMessage {
    /**
     * Status byte (message type in the high nibble, channel in the low nibble).
     */
    uint8_t status;
    /**
     * First data byte.
     */
    uint8_t data1;
    /**
     * Second data byte.
     */
    uint8_t data2;
    /**
     * Padding for alignment; always zero.
     */
    uint8_t _pad;
    /**
     * Arrival timestamp in microseconds.
     */
    int64_t timestamp_us;
} NativeMidiMessage;

/**
 * Creates a stopped clock at `bpm` (clamped to [20, 300]) and writes its handle
 * to `*out_handle`.
 */
int32_t ownaudio_midi_v1_clock_create(double bpm, struct MidiClockHandle **out_handle);

/**
 * Sets the clock tempo in beats per minute (clamped to [20, 300]).
 */
int32_t ownaudio_midi_v1_clock_set_bpm(struct MidiClockHandle *handle, double bpm);

/**
 * Starts the clock thread, invoking `callback` for each timing pulse.
 */
int32_t ownaudio_midi_v1_clock_start(struct MidiClockHandle *handle,
                                     struct Option_MidiPulseCallback callback,
                                     void *user_data);

/**
 * Stops the clock thread and waits for it to exit.
 */
int32_t ownaudio_midi_v1_clock_stop(struct MidiClockHandle *handle);

/**
 * Destroys a clock handle, stopping the thread first. Passing `null` is safe.
 */
void ownaudio_midi_v1_clock_destroy(struct MidiClockHandle *handle);

/**
 * Parses a Standard MIDI File from `data` and writes its handle to
 * `*out_handle`.
 */
int32_t ownaudio_midi_v1_file_parse(const uint8_t *data,
                                    size_t len,
                                    struct MidiFileHandle **out_handle);

/**
 * Writes the parsed file's SMF format word to `*out_format`.
 */
int32_t ownaudio_midi_v1_file_get_format(struct MidiFileHandle *handle, uint16_t *out_format);

/**
 * Writes the parsed file's ticks-per-beat resolution to `*out_tpb`.
 */
int32_t ownaudio_midi_v1_file_get_ticks_per_beat(struct MidiFileHandle *handle, uint16_t *out_tpb);

/**
 * Writes the parsed file's track count to `*out_count`.
 */
int32_t ownaudio_midi_v1_file_get_track_count(struct MidiFileHandle *handle, size_t *out_count);

/**
 * Writes the number of events in track `track_index` to `*out_count`.
 */
int32_t ownaudio_midi_v1_file_get_event_count(struct MidiFileHandle *handle,
                                              size_t track_index,
                                              size_t *out_count);

/**
 * Writes the event at (`track_index`, `event_index`) into `*out_event`.
 *
 * For meta and SysEx events the `meta_data` pointer references memory owned by
 * `handle` and stays valid until the handle is destroyed.
 */
int32_t ownaudio_midi_v1_file_get_event(struct MidiFileHandle *handle,
                                        size_t track_index,
                                        size_t event_index,
                                        struct NativeMidiEvent *out_event);

/**
 * Copies every event of track `track_index` into the caller's `out_events`
 * buffer in a single call, writing how many landed there to `*out_written`.
 *
 * This is the batch form of `ownaudio_midi_v1_file_get_event`: one FFI crossing
 * for a whole track instead of one per event, which matters on large files with
 * tens of thousands of events. Size the buffer from
 * `ownaudio_midi_v1_file_get_event_count`; if `capacity` is short only the first
 * `capacity` events are copied and `*out_written` says so. The `meta_data`
 * pointers borrow the file handle's memory — same lifetime as the single getter,
 * valid until the handle is destroyed.
 */
int32_t ownaudio_midi_v1_file_get_events(struct MidiFileHandle *handle,
                                         size_t track_index,
                                         struct NativeMidiEvent *out_events,
                                         size_t capacity,
                                         size_t *out_written);

/**
 * Destroys a parsed file handle. Passing `null` is safe.
 */
void ownaudio_midi_v1_file_destroy(struct MidiFileHandle *handle);

/**
 * Creates a MIDI file writer with the given format and timing resolution and
 * writes its handle to `*out_handle`.
 */
int32_t ownaudio_midi_v1_writer_create(uint16_t format,
                                       uint16_t ticks_per_beat,
                                       struct MidiWriterHandle **out_handle);

/**
 * Begins a new, empty track. Subsequent `writer_add_event` calls append to it.
 */
int32_t ownaudio_midi_v1_writer_begin_track(struct MidiWriterHandle *handle);

/**
 * Appends an event to the current (most recently begun) track. The event's
 * payload bytes are copied, so the caller's buffer need only live for the call.
 */
int32_t ownaudio_midi_v1_writer_add_event(struct MidiWriterHandle *handle,
                                          struct NativeMidiEvent event);

/**
 * Appends a whole array of events to the current track in one call — the batch
 * form of `ownaudio_midi_v1_writer_add_event`. Each event's `meta_data` is
 * copied, so the caller's payload buffer only needs to live for the call.
 */
int32_t ownaudio_midi_v1_writer_add_events(struct MidiWriterHandle *handle,
                                           const struct NativeMidiEvent *events,
                                           size_t count);

/**
 * Serializes all added tracks to SMF bytes, writing the buffer pointer to
 * `*out_data` and its length to `*out_len`. The buffer must be released with
 * `ownaudio_midi_v1_free_bytes`.
 */
int32_t ownaudio_midi_v1_writer_serialize(struct MidiWriterHandle *handle,
                                          uint8_t **out_data,
                                          size_t *out_len);

/**
 * Destroys a writer handle. Passing `null` is safe.
 */
void ownaudio_midi_v1_writer_destroy(struct MidiWriterHandle *handle);

/**
 * Releases a byte buffer returned by `ownaudio_midi_v1_writer_serialize`.
 * Passing `null` is safe.
 */
void ownaudio_midi_v1_free_bytes(uint8_t *data, size_t len);

/**
 * Writes a newly allocated array of null-terminated UTF-8 input port names to
 * `*out_names` and its length to `*out_count`.
 *
 * The caller must release the array with `ownaudio_midi_v1_free_port_names`.
 */
int32_t ownaudio_midi_v1_list_input_ports(char ***out_names, size_t *out_count);

/**
 * Writes a newly allocated array of null-terminated UTF-8 output port names to
 * `*out_names` and its length to `*out_count`.
 *
 * The caller must release the array with `ownaudio_midi_v1_free_port_names`.
 */
int32_t ownaudio_midi_v1_list_output_ports(char ***out_names, size_t *out_count);

/**
 * Cheap fingerprint of the current MIDI port topology — the input and output
 * port counts plus a hash over their names, all in one call. The C# hot-plug
 * poller compares this against the previous tick and only pays for the full
 * name lists (and the managed string allocations that go with them) when the
 * fingerprint actually moved. Any of the out-pointers may be null if the caller
 * only wants some of the fields.
 *
 * The enumeration itself still allocates on the native heap, but nothing here
 * touches the managed GC, which is the whole point of polling through it.
 */
int32_t ownaudio_midi_v1_port_fingerprint(size_t *out_input_count,
                                          size_t *out_output_count,
                                          uint64_t *out_fingerprint);

/**
 * Releases a port-name array previously returned by one of the enumeration
 * exports. Passing `null` is safe.
 */
void ownaudio_midi_v1_free_port_names(char **names, size_t count);

/**
 * Opens a hardware MIDI input port by name and writes its handle to
 * `*out_handle`.
 */
int32_t ownaudio_midi_v1_input_port_open(const char *port_name,
                                         struct MidiInputPortHandle **out_handle);

/**
 * Creates a virtual MIDI input port and writes its handle to `*out_handle`.
 *
 * Returns [`MidiErrorCode::PlatformUnsupported`] where virtual ports are not
 * available (for example under WinMM on Windows).
 */
int32_t ownaudio_midi_v1_create_virtual_input(const char *name,
                                              struct MidiInputPortHandle **out_handle);

/**
 * Starts delivering incoming short messages to `callback`, ignoring SysEx.
 */
int32_t ownaudio_midi_v1_input_port_start(struct MidiInputPortHandle *handle,
                                          struct Option_MidiMessageCallback callback,
                                          void *user_data);

/**
 * Starts delivering incoming short messages and SysEx messages to the two
 * supplied callbacks.
 */
int32_t ownaudio_midi_v1_input_port_start_with_sysex(struct MidiInputPortHandle *handle,
                                                     struct Option_MidiMessageCallback msg_callback,
                                                     struct Option_MidiSysExCallback sysex_callback,
                                                     void *user_data);

/**
 * Stops delivery of incoming messages, closing the active connection.
 */
int32_t ownaudio_midi_v1_input_port_stop(struct MidiInputPortHandle *handle);

/**
 * Destroys an input port handle, stopping delivery first. Passing `null` is safe.
 */
void ownaudio_midi_v1_input_port_destroy(struct MidiInputPortHandle *handle);

/**
 * Opens a hardware MIDI output port by name and writes its handle to
 * `*out_handle`.
 */
int32_t ownaudio_midi_v1_output_port_open(const char *port_name,
                                          struct MidiOutputPortHandle **out_handle);

/**
 * Creates a virtual MIDI output port and writes its handle to `*out_handle`.
 *
 * Returns [`MidiErrorCode::PlatformUnsupported`] where virtual ports are not
 * available.
 */
int32_t ownaudio_midi_v1_create_virtual_output(const char *name,
                                               struct MidiOutputPortHandle **out_handle);

/**
 * Sends a short MIDI message to the output port.
 */
int32_t ownaudio_midi_v1_output_port_send(struct MidiOutputPortHandle *handle,
                                          struct NativeMidiMessage msg);

/**
 * Sends a raw SysEx byte sequence to the output port.
 */
int32_t ownaudio_midi_v1_output_port_send_sysex(struct MidiOutputPortHandle *handle,
                                                const uint8_t *data,
                                                size_t len);

/**
 * Destroys an output port handle. Passing `null` is safe.
 */
void ownaudio_midi_v1_output_port_destroy(struct MidiOutputPortHandle *handle);

#endif  /* OWNAUDIO_MIDI_FFI_H */